crates/toml_edit/tests/snapshots/invalid/string/no-close-07.stderr
TOML parse error at line 2, column 42
  |
2 | no-ending-quote = 'One time, at band camp
  |                                          ^
invalid literal string, expected `'`
